Fixed scale issue on mobile devices

--- a/styles/AboutSection.module.css
+++ b/styles/AboutSection.module.css
@@ -13,6 +13,7 @@
   grid-template-columns: repeat(2, auto);
   justify-items: center;
   transform: translateY(calc(-50% - var(--padding-size)));
+  margin-bottom: 4rem;
 }
 
 .botSeparators {
