--- a/styles/ContactForm.module.css
+++ b/styles/ContactForm.module.css
@@ -5,6 +5,7 @@
 
 .formButton {
   font-family: inherit;
+  font-weight: bold;
   font-size: 1.25rem;
   border: none;
   outline: none;
