--- a/styles/ContactSection.module.css
+++ b/styles/ContactSection.module.css
@@ -10,6 +10,7 @@
   grid-template-columns: repeat(2, auto);
   justify-items: center;
   transform: translateY(calc(-50% - var(--padding-size)));
+  margin-bottom: 4rem;
 }
 
 .contactGrid {
